[[release-notes-x.x.x]]
==== x.x.x (YYYY-MM-DD)

[float]
===== Breaking changes
- Breaking change

[float]
===== Deprecated
- Deprecation {pull}2526[#2526]

[float]
===== Added
- Feature {pull}2526[#2526]

[float]
===== Changed
- Change {pull}2526[#2526]

[float]
===== Fixed
- Fix {pull}2526[#2526]

[float]
[[unreleased]]
==== Unreleased
////

[[release-notes-3.x]]
=== Ruby Agent version 3.x

[[release-notes-3.5.0]]
==== 3.5.0 (2020-02-12)

[float]
===== Added

- Pass along tracestate headers and add prefixless Traceparent header {pull}694[#694]
- Add sanitize_field_names to replace custom_key_filters {pull}708[#708]
- Add `rows_affected` to database related spans (Sequel only for now) {pull}668[#668]

[float]
===== Changed

- Rename disabled_instrumentations to disable_instrumentations {pull}695[#695]

[float]
===== Fixed

- Fix thread race condition in metrics collection (JRuby) {pull}669[#669]

[[release-notes-3.4.0]]
==== 3.4.0 (2020-01-10)

[float]
===== Added

- Add `span.context.destination` fields {pull}647[#647]
- Add more precise (experimental) SQL summarizer {pull}640[#640]
- Add support for Shoryuken (AWS SQS) {pull}674[#674]
- Add support for Sneakers (Experimental) {pull}676[#676]
- Add option `api_key` (experimental) to specify an Api key to use with the apm server {pull}655[#655]

[float]
===== Changed

- Allow action dispatch spy to be disabled via `disabled_instrumentations` {pull}657[#657]

[float]
===== Fixed

- Fix Rails Console detection when top-level `Console` constant defined {pull}664[#664]
- Fix Ruby 2.7 related deprecation warnings {pull}667[#667]
- Fix HTTP response header values not being converted to strings {pull}675[#675]

[[release-notes-3.3.0]]
==== 3.3.0 (2019-12-05)

[float]
===== Added

- Add option `disable_metrics` {pull}625[#625]

[float]
===== Fixed

- Make Filters thread-safe {pull}624[#624]
- Omit passwords in outgoing urls {pull}629[#629]
- Add missing mutex to Counter metrics {pull}636[#636]